--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     "    flattened=[]\n",
     "    for i in list:\n",
     "        for j in i:\n",
-    "            flattened.appen(j)\n",
+    "            flattened.append(j)\n",
     "        \n",
     "flat = [flatteningFunction(colors)]"
    ]
