--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,9 @@
     "        for j in i:\n",
     "            flattened.append(j)\n",
     "        \n",
-    "flat = [flatteningFunction(colors)]"
+    "flat = [flatteningFunction(colors)]\n",
+    "\n",
+    "fl"
    ]
   },
   {
