--- a/index.ipynb
+++ b/index.ipynb
@@ -231,9 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
@@ -250,7 +258,7 @@
     "        \n",
     "flat = flatteningFunction(colors)\n",
     "\n",
-    "pflat"
+    "print(flat)"
    ]
   },
   {
