--- a/index.ipynb
+++ b/index.ipynb
@@ -231,15 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['blue', 'white', 'red', 'green', 'gold']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -259,7 +262,7 @@
     "        \n",
     "flat = flatteningFunction(colors)\n",
     "\n",
-    "print(flat"
+    "flat"
    ]
   },
   {
