--- a/index.ipynb
+++ b/index.ipynb
@@ -387,19 +387,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'capitains' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-55e5e03f3c21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mcapitains\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# code goes here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'capitains' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Mile JEDINAK',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 15,\n",
+       "  'position': 'Midfield'}]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -414,7 +420,7 @@
     "    else:\n",
     "        continue\n",
     "\n",
-    "capitains\n",
+    "captains\n",
     "        \n",
     "# code goes here\n",
     "\n"
