--- a/index.ipynb
+++ b/index.ipynb
@@ -387,25 +387,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Hugo LLORIS',\n",
-       "  'captain': True,\n",
-       "  'shirt_number': 1,\n",
-       "  'position': 'Goalie'},\n",
-       " {'name': 'Mile JEDINAK',\n",
-       "  'captain': True,\n",
-       "  'shirt_number': 15,\n",
-       "  'position': 'Midfield'}]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Mile JEDINAK', 'captain': True, 'shirt_number': 15, 'position': 'Midfield'}]\n"
+     ]
     }
    ],
    "source": [
@@ -420,7 +410,7 @@
     "    else:\n",
     "        continue\n",
     "\n",
-    "captains\n",
+    "print(captains)\n",
     "        \n",
     "# code goes here\n",
     "\n"
