--- a/index.ipynb
+++ b/index.ipynb
@@ -387,16 +387,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-64-1b2562709782>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-64-1b2562709782>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for player in playersFlattened:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Mile JEDINAK',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 15,\n",
+       "  'position': 'Midfield'}]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -405,14 +414,15 @@
     "\n",
     "\n",
     "def searchForfunc(key,condition):\n",
-    "    captains = []\n",
+    "    returnedFro = []\n",
     "    for player in playersFlattened:\n",
-    "        if player['key'] == condition:\n",
+    "        if player[key] == condition:\n",
     "            captains.append(player)\n",
     "        else:\n",
-    "                continue\n",
+    "            continue\n",
+    "    return captains\n",
     "\n",
-    "searchForfunc(captain, True)\n",
+    "searchForfunc(\"captain\", True)\n",
     "\n",
     "# print(captains)\n",
     "        \n",
