--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "  'position': 'Midfield'}]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,14 +413,14 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "\n",
     "\n",
-    "def searchForfunc(key,condition):\n",
-    "    captains = []\n",
+    "def searchForfuncreturnplayerdic(key,condition):\n",
+    "    returnFromsearch = []\n",
     "    for player in playersFlattened:\n",
     "        if player[key] == condition:\n",
-    "            captains.append(player)\n",
+    "            returnFromsearch.append(player)\n",
     "        else:\n",
     "            continue\n",
-    "    return captains\n",
+    "    return returnFromsearch\n",
     "\n",
     "searchForfunc(\"captain\", True)\n",
     "\n",
