--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "  'position': 'Midfield'}]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "\n",
     "\n",
-    "def searchForfuncreturnplayerdic(key,condition):\n",
+    "def searchForfuncreturnplayerdict(key,condition):\n",
     "    returnFromsearch = []\n",
     "    for player in playersFlattened:\n",
     "        if player[key] == condition:\n",
@@ -422,7 +422,7 @@
     "            continue\n",
     "    return returnFromsearch\n",
     "\n",
-    "searchForfunc(\"captain\", True)\n",
+    "searchForfuncreturnplayerdict(\"captain\", True)\n",
     "\n",
     "# print(captains)\n",
     "        \n",
@@ -431,12 +431,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from ONLY the home team\n",
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
     "home_team_players = None\n",
+    "\n",
     "# code goes here"
    ]
   },
