--- a/index.ipynb
+++ b/index.ipynb
@@ -432,9 +432,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'home_team': True,\n",
+       "  'away_team': False,\n",
+       "  'country': 'France',\n",
+       "  'num_passes': 484,\n",
+       "  'passes_completed': 423,\n",
+       "  'fouls_committed': 16,\n",
+       "  'colors': ['blue', 'white', 'red'],\n",
+       "  'players': [{'name': 'Hugo LLORIS',\n",
+       "    'captain': True,\n",
+       "    'shirt_number': 1,\n",
+       "    'position': 'Goalie'},\n",
+       "   {'name': 'Benjamin PAVARD',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 2,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Raphael VARANE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 4,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Samuel UMTITI',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 5,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Paul POGBA',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 6,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Antoine GRIEZMANN',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 7,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Kylian MBAPPE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 10,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Ousmane DEMBELE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 11,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Corentin TOLISSO',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 12,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Ngolo KANTE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 13,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Lucas HERNANDEZ',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 21,\n",
+       "    'position': 'Defender'}]}]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from ONLY the home team\n",
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
@@ -449,7 +510,7 @@
     "            continue\n",
     "    return returnFromsearch\n",
     "\n",
-    "searchForfuncreturnTeamdict(\"Home_Team\", True)\n",
+    "searchForfuncreturnTeamdict(\"home_team\", True)\n",
     "# code goes here"
    ]
   },
