--- a/index.ipynb
+++ b/index.ipynb
@@ -509,9 +509,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "searchForfuncreturnTeamdict() takes 2 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-85-29b9e9a7ab2d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mreturnFromsearch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0msearchForfuncreturnTeamdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"home_team\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"position\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Forward\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;31m# code goes here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: searchForfuncreturnTeamdict() takes 2 positional arguments but 4 were given"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list \n",
     "# with the players from ONLY the away team with the position of forward\n",
@@ -527,7 +539,7 @@
     "            continue\n",
     "    return returnFromsearch\n",
     "\n",
-    "searchForfuncreturnTeamdict(\"home_team\",\"position\", True,)\n",
+    "searchForfuncreturnTeamdict(\"home_team\",\"position\", True,\"Forward\")\n",
     "# code goes here"
    ]
   },
