--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,8 @@
     "def searchForfuncreturnTeamPositiondict(key1,key2,condition1,condition2):\n",
     "    returnFromsearch = []\n",
     "    for team in soccer_match:\n",
-    "        if team[key1] == condition1 and team[key2] == condition2:\n",
+    "        if team[key1] == condition1:\n",
+    "            for player in playersplayer[key2] == condition2:\n",
     "            returnFromsearch.append(team['players'])\n",
     "        else:\n",
     "            continue\n",
