--- a/index.ipynb
+++ b/index.ipynb
@@ -509,27 +509,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Antoine GRIEZMANN',\n",
+       "[{'name': 'Mathew LECKIE',\n",
        "  'captain': False,\n",
        "  'shirt_number': 7,\n",
        "  'position': 'Forward'},\n",
-       " {'name': 'Kylian MBAPPE',\n",
+       " {'name': 'Robbie KRUSE',\n",
        "  'captain': False,\n",
        "  'shirt_number': 10,\n",
        "  'position': 'Forward'},\n",
-       " {'name': 'Ousmane DEMBELE',\n",
+       " {'name': 'Andrew NABBOUT',\n",
        "  'captain': False,\n",
        "  'shirt_number': 11,\n",
        "  'position': 'Forward'}]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
     "            continue\n",
     "    return returnFromsearch\n",
     "\n",
-    "searchForfuncreturnTeamPositiondict(\"home_team\",\"position\", True,\"Forward\")\n",
+    "searchForfuncreturnTeamPositiondict(\"away_team\",\"position\", True,\"Go\")\n",
     "# code goes here"
    ]
   },
