--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = None\n",
     "\n",
-    "def searchForfuncreturnTeamPositiondict(key1,key2,condition1,condition2):\n",
+    "def HighestPlayerShirt(key1,key2,condition1,condition2):\n",
     "    returnFromsearch = []\n",
     "    for team in soccer_match:\n",
     "        if team[key1] == condition1:\n",
